kubernetes/applications/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  type: ClusterIP
  selector:
    app: jellyfin
  ports:
    - name: http
      port: 80
      targetPort: http
