kubernetes/applications/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - jellyfin.apps.lab.sirnotethan.uk
      secretName: apps-prod-wildcard-tls
  rules:
    - host: jellyfin.apps.lab.sirnotethan.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 80
